# kiwirail

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  random_10.dot  random_10.kiwi  random_10.kiwi.dot  sample.kiwi.dot
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: input_parsing.rs  kiwi_dot_converter.rs  lib.rs  route_count.rs  route_distance.rs  shortest_route.rs
