[package]
name = "kiwirail"
version = "0.1.0"
authors = ["Albino Cordeiro <albino@intuitionlogic.com>"]
edition = "2018"
description = "kiwirail mandatory description"
repository = "https://github.com/albinocordeiro/kiwirail"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
